--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 serde_bytes = "0.11"
+smol = "1.2.5"
+sha-1 = "0.9.4"
+
+[dev-dependencies]
+tempfile = "3.2.0"
