--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ thiserror = "1.0"
 serde_bytes = "0.11"
 smol = "1.2.5"
 sha-1 = "0.9.4"
+data-encoding = "2.3.2"
 
 [dev-dependencies]
 tempfile = "3.2.0"
