--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_bytes = "0.11"
 smol = "1.2.5"
 sha-1 = "0.9.4"
 data-encoding = "2.3.2"
+url = "2.2.1"
+hex = "0.4.3"
 
 [dev-dependencies]
 tempfile = "3.2.0"
