--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ data-encoding = "2.3.2"
 url = "2.2.1"
 hex = "0.4.3"
 lazy_static = "1.4.0"
+async-oneshot = "0.5.0"
 
 [dev-dependencies]
 tempfile = "3.2.0"
