--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-smol = "1.2.5"
-sha-1 = "0.9.4"
-data-encoding = "2.3.2"
-url = "2.2.1"
-hex = "0.4.3"
+async-std = "1.10"
+sha-1 = "0.9"
+data-encoding = "2.3"
+url = "2.2"
+hex = "0.4"
 log = "*"
-rand = "0.8.3"
+rand = "0.8"
 
 [dev-dependencies]
-tempfile = "3.2.0"
+tempfile = "3.2"
 env_logger = "*"
