--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-async-std = "1.10"
+async-std = { version = "1.10", features = ["unstable"] }
 sha-1 = "0.9"
 data-encoding = "2.3"
 url = "2.2"
