--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde_bencode = "0.2.3"
 thiserror = "1.0"
 async-std = { version = "1.10", features = ["unstable"] }
 sha-1 = "0.9"
