--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-serde_bencode = "0.2.3"
+serde_bencode = "0.2"
 thiserror = "1.0"
 async-std = { version = "1.10", features = ["unstable"] }
 sha-1 = "0.9"
@@ -16,9 +16,10 @@ url = "2.2"
 hex = "0.4"
 log = "*"
 rand = "0.8"
-bytes = "1.1.0"
-bitvec = "0.22.3"
-
+bytes = "1.1"
+bitvec = "0.22"
+asynchronous-codec = "0.6"
+futures = "0.3"
 [dev-dependencies]
 tempfile = "3.2"
 env_logger = "*"
